2014-Jun-13 jana        Tag V08-00-09.  Added 2 PMT quantities to Gas Detector BLD data type
	                                Modified bldreader, cfgreader, xtcreader appropriately.
					Uses psddldata tag V01-00-10
2014-May-29 weaver	Tag V08-00-08.  Changed XtcMonitorClient behavior to use event queue passed by server.
					Changed XtcMonitorServer to recover buffers in use by terminating clients.
2014-May-12 weaver	Tag V08-00-07.  Fix to use nonblocking message queue receive in XtcMonitorServer.cc.
2014-May-08 tomy        Tag V08-00-06.  Add BldDataGMDV2
2014-Apr-03 cpo         Tag V08-00-02.  Add 64-bit time accessors for psana indexing.
2014-Mar-26 cpo		Tag V08-00-01.  Workaround for what I believe is a compiler bug when compiling
                                        indexing with x86_64-opt (works with x86_64-dbg).
2014-Mar-26 cpo		Tag V07-02-23.  Add const accessor methods to index to
                                        allow for psana-indexing.
2014-Jan-07 salnikov	Tag V07-02-15.  Derived from psddldata tag V01-00-01 and psddl V00-13-02.
                                        Changed storage type for enum in Acqiris::TdcChannel class, interface did not change.
2013-Dec-22 salnikov	Tag V07-02-14.  Derived from psddldata tag V01-00-00 and psddl V00-13-00.
                                        Switching from XML-DDL to new DDL, psddl/package.mk updated, generated code should be identical except for formatting.  
2013-Dec-22 salnikov	Tag V07-02-13.  Derived from psddldata tag V00-04-57 and psddl V00-12-14.  
                                        Method Acqiris::TdcDataV1::data() now requires an argument which defines the size of the returned array.
2013-Dec-12 salnikov	Tag V07-02-11.  Derived from psddldata tag V00-04-55 and psddl V00-12-09.  Fixing bug in DDL definition of Ipimb::ConfigV1::capacitorValues(),