@@ -1,3 +1,5 @@
+2014-Jun-27 weaver	Tag V08-00-10.  Fixed XtcMonitorServer extra buffer recovery for retiring clients.
+					Removed all potential mq_send blocks.
 2014-Jun-13 jana        Tag V08-00-09.  Added 2 PMT quantities to Gas Detector BLD data type
 	                                Modified bldreader, cfgreader, xtcreader appropriately.
 					Uses psddldata tag V01-00-10
